# SVG_Handler

./: README.md
SVG_Handler/: CMakeLists.txt
SVG_Handler/cli/: main.cpp
SVG_Handler/gui_gtkmm4/: main.cpp  mainwindow.cpp  mainwindow.hpp
SVG_Handler/gui_qt6/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
SVG_Handler/include/: csv_exporter.hpp  string_utils.hpp  svg_core.hpp  svg_handler.hpp  svg_reader.hpp  tree_utils.hpp
SVG_Handler/python/cli_py3/: svg_handler.py
SVG_Handler/python/gui_pyside6/: main.py  mainwindow.py
SVG_Handler/src/: csv_exporter.cpp  string_utils.cpp  svg_handler.cpp  svg_reader.cpp  tree_utils.cpp
SVG_Handler/tests/: test.cpp
